<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Paradigm</string>
    <string name="navigation_drawer_open" tools:ignore="UnusedResources">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="UnusedResources">Close navigation drawer</string>
    <string name="nav_header_title">Paradigm</string>
    <string name="nav_header_subtitle" tools:ignore="UnusedResources">android.studio@android.com</string>
    <string name="nav_header_desc" tools:ignore="UnusedResources">Navigation header</string>
    <string name="action_settings" tools:ignore="UnusedResources">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_checkpoint" tools:ignore="UnusedResources">Checkpoint</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="default_username">defaultUser</string>
    <string name="News_Feed">News Feed</string>
    <string name="Dark_Mode" tools:ignore="UnusedResources">Dark Mode</string>
    <string name="Visual_Settings" tools:ignore="UnusedResources">Visual Settings</string>
    <string name="Reset_Settings" tools:ignore="UnusedResources">Reset Settings</string>
    <string name="Erase_Data" tools:ignore="UnusedResources">Erase Data</string>
    <string name="Progress" tools:ignore="UnusedResources">Progress</string>
    <string name="Continue" tools:ignore="UnusedResources">Continue</string>
    <string name="Expand_All" tools:ignore="UnusedResources">Expand All</string>
    <string name="Return" tools:ignore="UnusedResources">Return</string>
    <string name="default_option" tools:ignore="UnusedResources">option x</string>
    <string name="answer_prompt" tools:ignore="UnusedResources">Enter your answer here.</string>
    <string name="title_activity_settings" tools:ignore="UnusedResources">SettingsActivity</string>
    <string name="interface_header">News Feed</string>
    <string name="general_header">General</string>
    <string name="newsfeed_toggle" tools:ignore="UnusedResources">News Feed</string>
    <string name="darkmode_toggle" tools:ignore="UnusedResources">Dark Mode</string>
    <string name="reset_dialog">Reset settings</string>
    <string name="eraseData_dialog">Erase user data</string>
    <string name="textview" tools:ignore="UnusedResources">TextView</string>
    <string name="messages_header" tools:ignore="UnusedResources">Messages</string>
    <string name="sync_header" tools:ignore="UnusedResources">Sync</string>
    <string name="signature_title" tools:ignore="UnusedResources">Your signature</string>
    <string name="reply_title" tools:ignore="UnusedResources">Default reply action</string>
    <string name="sync_title" tools:ignore="UnusedResources">Sync email periodically</string>
    <string name="attachment_title" tools:ignore="UnusedResources">Download incoming attachments</string>
    <string name="attachment_summary_on" tools:ignore="UnusedResources">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" tools:ignore="UnusedResources">Only download attachments when manually requested</string>
    <string name="hint" tools:ignore="UnusedResources">hint</string>
    <string name="welcome">Welcome!</string>
    <string name="pick_a_username">Pick a username…</string>
    <string name="default_module_name">Default Module Name</string>
    <string name="default_section_name" tools:ignore="UnusedResources">Default Section Name</string>
    <string name="default_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. </string>
    <string name="default_content_long" tools:ignore="UnusedResources">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisi velit, venenatis eget finibus sit amet, hendrerit commodo risus.
    </string>
    <string name="quiz_score" tools:ignore="UnusedResources">Quiz Score</string>
    <string name="article_title">Article Title</string>
    <string name="author">author</string>
    <string name="publication_date" tools:ignore="UnusedResources">Publication Date</string>
    <string name="newsTitleText" tools:ignore="UnusedResources">News</string>
    <string name="todo">TODO</string>
    <string name="dummy_question" tools:ignore="UnusedResources">Dummy Question.</string>
    <string name="zero_progress_percent">0%</string>
</resources>