<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="127dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/module_name"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/module_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/default_module_name"
        android:textAlignment="center"
        android:textColor="@color/textBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueProgressButton"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/text_view_border"
        android:fontFamily="@font/roboto"
        android:text="@string/Continue"
        android:textAlignment="center"
        android:textColor="@color/textBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_view_border"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/sectionImage"
                android:layout_width="93dp"
                android:layout_height="91dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="@+id/sectionBox"
                app:layout_constraintStart_toStartOf="@+id/sectionBox"
                app:layout_constraintTop_toTopOf="@+id/sectionBox"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_menu_slideshow" />

            <TextView
                android:id="@+id/sectionBox"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:background="@drawable/text_view_border"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sectionNameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="85dp"
                android:text="@string/default_section_name"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/sectionProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="148dp"
                android:layout_height="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="96dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionNameBox" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
